--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,14 @@ target/
 *.iml
 *.ipr
 
+encodings.xml
+workspace.xml
+misc.xml
+vcs.xml
+.gitIgnore
+ .idea/workspace.xml
+.idea/uiDesigner.xml
+
 ### Eclipse ###
 .apt_generated
 .classpath
